--- a/sam-viewer/v-2020-05-23/index.html
+++ b/sam-viewer/v-2020-05-23/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script>
-      window.location = "globe-template.html";
+      window.location = "sam-viewer.html";
     </script>
   </body>
 </html>
