add summary titles

--- a/sam-viewer/v-2020-05-24/sam-viewer.html
+++ b/sam-viewer/v-2020-05-24/sam-viewer.html
@@ -57,7 +57,7 @@
 
 			<details id=detFile>
 
-				<summary class="sumPrimary gmd-1">file menu</summary>
+				<summary class="sumPrimary gmd-1" title="Open files on your device: ">file menu</summary>
 
 				<div id="FRJdivFileReaderJson"></div>
 
@@ -65,7 +65,7 @@
 
 			<details id=detView>
 
-				<summary class="sumPrimary gmd-1">view menu</summary>
+				<summary class="sumPrimary gmd-1" title="View selected panels" >view menu</summary>
 
 				<p>
 					Select individual panels. Use cursor keys to scroll through the list.<br>
@@ -83,7 +83,7 @@
 
 			<details id=detData>
 
-				<summary class="sumPrimary gmd-1">data menu</summary>
+				<summary class="sumPrimary gmd-1" title="Browse the deta in the JSON file" >data menu</summary>
 
 				<div id=JTVdivJsonTreeView ></div>
 
