--- a/sam-viewer/v-2020-05-25/sam-viewer.html
+++ b/sam-viewer/v-2020-05-25/sam-viewer.html
@@ -103,7 +103,7 @@
 
 	</details>
 
-	<div id="divPopUp" class="gmd-2">When you touch a country indicator,<br>the rotation will stop<br>and statistics will appear here </div>
+	<div id="divPopUp" class="gmd-2">When you touch a panel,<br>the rotation will stop<br>and its details will appear here </div>
 
 	<footer>
 
