--- a/sam-viewer/v-2020-05-26/readme.html
+++ b/sam-viewer/v-2020-05-26/readme.html
@@ -12,7 +12,7 @@
 
 :root { font: 100% monospace; }
 * { box-sizing: border-box; }
-body { margin: 0 auto; max-width: 100ch; }
+body { margin: 0 auto; max-width: 80ch; }
 a { color: crimson; text-decoration: none; }
 a:hover, a:focus, a:active { text-decoration: underline; }
 aside { border: 1px solid lightgray; margin-top: 15px; padding: 2px; }
@@ -36,7 +36,7 @@ summary { cursor: pointer; font-size: 2.5ch; font-weight: bold; outline: none; }
 // https://github.com/showdownjs/showdown
 // Canonical version: https://github.com/pushme-pullyou/templates-01/tree/master/open-markdown-or-html
 
-	let defaultScript = "open-markdown-or-html-2020-04-06.html";
+	let defaultScript = "readme.html";
 
 	defaultFile = "README.md";
 
