--- a/sam-viewer/v-2020-05-26/sam-viewer.html
+++ b/sam-viewer/v-2020-05-26/sam-viewer.html
@@ -47,7 +47,7 @@
 						SAM Viewer
 					</a>
 					&nbsp;
-					<span class="info"><img width=24 style=opacity:0.5; src=../../assets/icons/noun_Information_585560.svg> <span id="divDescription" class="infoTooltip gmd-5">
+					<span class="info"><img width=24 style=opacity:0.5; src="https://cdn.glitch.com/7af242e2-0cf2-4179-8c41-b2f2cb982c5a%2Fnoun_Information_585560.svg"> <span id="divDescription" class="infoTooltip gmd-5">
 
 					</span></span>
 
@@ -97,7 +97,7 @@
 
 			<br>
 
-			<center><img title="Single finger for single method!" height="32" width="32" src="../../assets/icons/noun_single_1185687.svg"> </center>
+			<center><img title="Single finger for single method!" height="32" width="32" src="https://cdn.glitch.com/7af242e2-0cf2-4179-8c41-b2f2cb982c5a%2Fnoun_single_1185687.svg?v=1590528353824"> </center>
 
 		</nav>
 
@@ -107,7 +107,7 @@
 
 	<footer>
 
-		<button onclick="THR.controls.reset();" title="reset the view" class="ftrButton"><img height=32 width=32 src="../../assets/icons/noun_Home_3359355.svg"> </button>
+		<button onclick="THR.controls.reset();" title="reset the view" class="ftrButton"><img height=32 width=32 src="https://cdn.glitch.com/7af242e2-0cf2-4179-8c41-b2f2cb982c5a%2Fnoun_Home_3359355.svg"> </button>
 
 		<button onclick="THR.controls.autoRotate=!THR.controls.autoRotate" title="toggle the rotation" class=ftrButton>&circlearrowright;</button>
 
