--- a/sam-viewer/v-2020-05-29/sam-viewer.html
+++ b/sam-viewer/v-2020-05-29/sam-viewer.html
@@ -5,30 +5,38 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" />
-	<meta name="description" content="Part of a series of online interactive AEC viewers designed to be forked, hacked and remixed  with real-time interactive 3D graphics in your browser using the WebGL and the Three.js JavaScript library" />
+	<meta name="description" content="Part of a series of online interactive AEC viewers designed to be forked, hacked and remixed  with real-time interactive 3D graphics in your browser using the WebGL and the Three.js JavaScript library"
+	/>
 	<meta name="keywords" content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js">
+	</script>
 	<title>SAM Viewer</title>
 
 	<link rel="stylesheet" href="./style-2020-05-26.css">
-  
-  <div style="color:#bbb;float:right;font-size:12px;font-style:italic;">Credits: Theo Armour, Michal Dengusiak, Jakub Ziolkowksi
+
+	<div style="color:#bbb;float:right;font-size:12px;font-style:italic;">Credits: Theo Armour, Michal Dengusiak, Jakub Ziolkowksi
 	</div>
-  
+
 </head>
 
 <body>
-	<script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r116/build/three.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r116/examples/js/controls/OrbitControls.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r116/build/three.min.js">
+	</script>
+	<script src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@r116/examples/js/controls/OrbitControls.js">
+	</script>
 
-	<script src="js/thr-threejs-aec-2020-05-25.js"></script>
+	<script src="js/thr-threejs-aec-2020-05-25.js">
+	</script>
 
-	<script src="js/hrt-heart-2020-05-23.js"></script>
-	<script src="js/scc-screen-ccapture-2020-05-23.js"></script>
-	<script src="js/ray-raycaster-sam-2020-05-23.js"></script>
+	<script src="js/hrt-heart-2020-05-23.js">
+	</script>
+	<script src="js/scc-screen-ccapture-2020-05-23.js">
+	</script>
+	<script src="js/ray-raycaster-sam-2020-05-23.js">
+	</script>
 
 
-	<details id="detNavMenu" >
+	<details id="detNavMenu">
 
 		<summary id="sumNavMenu" class="sumPrimary gmd-1">show || hide menu</summary>
 
